# Memoria

./: .dockerignore  .env.example  .gitignore  .mergify.yml  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  Makefile  README.md  README.pypi.md  SETUP_GUIDE.md  SKILLS.md  cliff.toml  docker-compose.remote.yml  docker-compose.yml  nohup.out  pyproject.toml
.github/: CODEOWNERS
benchmarks/: run_rust.py
docs/: agent-integration-guide.md  api-reference.md  apikey-mode.md  deployment.md  design-apikey-mode.md  graph-benchmark-rationale.md  improvement_episodic_memory.md  local-embedding.md  memory-ability-taxonomy.md  per-user-database-architecture.md  plan.md  release.md  roadmap.md  role-scope-implementation-outline.md  role-scoped-memory-spaces.md  user-guide.md
examples/: explain_bool_demo.py
grafana/: memoria-overview.json
memoria/: .env.example  (+9 more)
memoria/crates/memoria-api/: AUTH_CHANGES.md  Cargo.toml
memoria/crates/memoria-api/src/: auth.rs  instrumented_embedder.rs  lib.rs  main.rs  metrics_summary.rs  models.rs  otel.rs  rate_limit.rs  state.rs
memoria/crates/memoria-api/src/metrics/: embedding.rs  http.rs  middleware.rs  mod.rs  render.rs  security.rs  types.rs  worker.rs
memoria/crates/memoria-api/src/routes/: admin.rs  auth.rs  governance.rs  groups.rs  mcp.rs  memory.rs  metrics.rs  mod.rs  plugins.rs  sessions.rs  snapshots.rs
memoria/crates/memoria-api/src/v2/: mod.rs  models.rs  registry.rs  router.rs  routes.rs
memoria/crates/memoria-api/tests/: api_db_verify.rs  api_e2e.rs  api_multi_db_purge.rs  api_multi_db_routing.rs  group_collab_api.rs  pool_budget_e2e.rs  pool_isolation.rs  v2_api_db_isolation.rs  v2_api_e2e.rs  v2_api_isolation.rs
memoria/crates/memoria-api/tests/support/: multi_db.rs  v2_api.rs
memoria/crates/memoria-cli/: Cargo.toml
memoria/crates/memoria-cli/src/: benchmark.rs  benchmark_command.rs  benchmark_executor.rs  benchmark_schema.rs  benchmark_scoring.rs  benchmark_taxonomy.rs  main.rs
memoria/crates/memoria-cli/src/v1/: benchmark_api.rs  mod.rs
memoria/crates/memoria-cli/src/v2/: benchmark_api.rs  benchmark_validation.rs  mod.rs
memoria/crates/memoria-cli/templates/: claude_goal_evolution.md  claude_memory_branching.md  claude_memory_hygiene.md  claude_rule.md  claude_session_lifecycle.md  codex_agents.md  cursor_goal_evolution.md  cursor_memory_branching.md  cursor_memory_hygiene.md  cursor_rule.md  cursor_session_lifecycle.md  gemini_memory_branching.md  gemini_rule.md  gemini_session_lifecycle.md  kiro_goal_evolution.md  kiro_memory_branching.md  kiro_memory_hygiene.md  kiro_session_lifecycle.md  kiro_steering.md
memoria/crates/memoria-core/: Cargo.toml
memoria/crates/memoria-core/src/: error.rs  interfaces.rs  lib.rs  sensitivity.rs  types.rs
memoria/crates/memoria-embedding/: Cargo.toml
memoria/crates/memoria-embedding/src/: http.rs  lib.rs  llm.rs  local.rs  mock.rs  round_robin.rs
memoria/crates/memoria-git/: Cargo.toml
memoria/crates/memoria-git/src/: lib.rs  service.rs
memoria/crates/memoria-git/tests/: git_ops.rs
memoria/crates/memoria-mcp/: Cargo.toml
memoria/crates/memoria-mcp/src/: config.rs  git_tools.rs  lib.rs  purge_args.rs  remote.rs  server.rs  tools.rs
memoria/crates/memoria-mcp/src/v2/: dispatch.rs  mod.rs  remote.rs  tools.rs
memoria/crates/memoria-mcp/tests/: branch_e2e.rs  core_tools_e2e.rs  edit_log_e2e.rs  feedback_e2e.rs  graph_e2e.rs  integration_full.rs  mcp_e2e.rs  perf_optimizations_e2e.rs  snapshot_e2e.rs  tools_unit.rs  v2_mcp_remote_capabilities.rs  v2_mcp_remote_isolation.rs  v2_tools_e2e.rs  v2_tools_unit.rs
memoria/crates/memoria-mcp/tests/support/: mod.rs  multi_db.rs
memoria/crates/memoria-service/: Cargo.toml  build.rs
memoria/crates/memoria-service/src/: config.rs  distributed.rs  governance.rs  graph_domains.rs  lib.rs  pipeline.rs  plugin_registry.rs  rebuild_worker.rs  scheduler.rs  scoring.rs  service.rs  stats_reporter.rs  strategy.rs  strategy_domain.rs  vector_index_monitor.rs
memoria/crates/memoria-service/src/plugin/: contract.rs  governance_hook.rs  grpc_runtime.rs  manifest.rs  mod.rs  repository.rs  rhai_runtime.rs  template.rs
memoria/crates/memoria-service/src/plugin/templates/: governance_plugin.rhai
memoria/crates/memoria-service/src/v2/: bootstrap.rs  mod.rs  worker.rs
memoria/crates/memoria-service/tests/: governance_pool_budget_e2e.rs  plugin_contract.rs  plugin_repository.rs  service_unit.rs  v2_runtime_isolation.rs
memoria/crates/memoria-service/tests/data/plugins/governance-audit-note/: manifest.json  plugin.rhai
memoria/crates/memoria-service/tests/data/plugins/governance-weekly-approval/: manifest.json  plugin.rhai
memoria/crates/memoria-storage/: Cargo.toml
memoria/crates/memoria-storage/src/: lib.rs  migration.rs  pool_config.rs  router.rs  store.rs
memoria/crates/memoria-storage/src/graph/: activation.rs  backfill.rs  consolidation.rs  mod.rs  ner.rs  retriever.rs  store.rs  types.rs
memoria/crates/memoria-storage/src/v2/: store.rs
memoria/crates/memoria-storage/tests/: branch_ops.rs  concurrent_lock.rs  lock_behavior.rs  mo_compat.rs  mo_correct.rs  router_multi_db.rs  session_consistency.rs  store_crud.rs  v2_store.rs  v2_store_isolation.rs  vector_index_ops.rs
memoria/crates/memoria-test-utils/: Cargo.toml
memoria/crates/memoria-test-utils/src/: lib.rs
memoria_rs/crates/memoria-api/: Cargo.toml
memoria_rs/crates/memoria-api/src/: auth.rs  lib.rs  main.rs  models.rs  routes.rs  state.rs
memoria_rs/crates/memoria-api/src/routes/: admin.rs  auth.rs  governance.rs  memory.rs  mod.rs  sessions.rs  snapshots.rs
memoria_rs/crates/memoria-api/tests/: api_db_verify.rs  api_e2e.rs
memoria_rs/crates/memoria-embedding/: Cargo.toml
memoria_rs/crates/memoria-embedding/src/: http.rs  lib.rs  llm.rs  local.rs
memoria_rs/crates/memoria-mcp/: Cargo.toml
memoria_rs/crates/memoria-mcp/src/: git_tools.rs  lib.rs  main.rs  remote.rs  server.rs  tools.rs
memoria_rs/crates/memoria-mcp/tests/: branch_e2e.rs  core_tools_e2e.rs  graph_e2e.rs  integration_full.rs  mcp_e2e.rs  snapshot_e2e.rs  tools_unit.rs
(+201 files in other folders)
