[package]
name = "memoria-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "memoria-rs"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json", "blocking"] }
