[package]
name = "memoria-cli"
version.workspace = true
edition = "2021"

[features]
default = []
local-embedding = ["memoria-embedding/local-embedding"]

[[bin]]
name = "memoria"
path = "src/main.rs"

[dependencies]
memoria-core = { workspace = true }
memoria-storage = { workspace = true }
memoria-embedding = { workspace = true }
memoria-service = { workspace = true }
memoria-git = { workspace = true }
memoria-mcp = { workspace = true }
memoria-api = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
ed25519-dalek = { version = "2.1", default-features = false, features = ["std"] }
base64 = "0.22"
getrandom = "0.2"
cliclack = "0.4"
flate2 = "1.1.9"
tar = "0.4.45"
tempfile = "3.27.0"
self-replace = "1.5.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
