[package]
name = "memoria-service"
version.workspace = true
edition = "2021"

[dependencies]
memoria-core = { workspace = true }
memoria-storage = { workspace = true }
memoria-embedding = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true, features = ["mysql", "runtime-tokio-rustls"] }
memoria-git = { path = "../memoria-git" }
rhai = { version = "1.19", features = ["sync", "serde"] }
semver = "1.0"
sha2 = "0.10"
base64 = "0.22"
ed25519-dalek = { version = "2.1", default-features = false, features = ["std"] }
tempfile = "3.14"
prost = "0.13"
tonic = { version = "0.12", features = ["transport"] }
moka = { version = "0.12", features = ["future"] }

[dev-dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
memoria-core = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
