[package]
name = "memoria-storage"
version.workspace = true
edition = "2021"

[dependencies]
memoria-core = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
moka = { version = "0.12", features = ["future"] }
sha2 = "0.10"

[dev-dependencies]
chrono = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing-subscriber = { workspace = true }
