[package]
name = "memoria-test-utils"
version.workspace = true
edition = "2021"

[dependencies]
memoria-core = { workspace = true }
memoria-git = { workspace = true }
memoria-service = { workspace = true }
memoria-storage = { workspace = true }
memoria-embedding = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
