[package]
name = "memoria-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "memoria-api"
path = "src/main.rs"

[dependencies]
memoria-core = { workspace = true }
memoria-storage = { workspace = true }
memoria-embedding = { workspace = true }
memoria-service = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
