[package]
name = "memoria-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "memoria-mcp-rs"
path = "src/main.rs"

[dependencies]
memoria-core = { workspace = true }
memoria-storage = { workspace = true }
memoria-embedding = { workspace = true }
memoria-service = { workspace = true }
chrono = { workspace = true }
memoria-git = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
memoria-core = { workspace = true }
memoria-storage = { workspace = true }
memoria-embedding = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
